--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@
 [submodule ".vim/pack/bundle/opt/Nvim-R"]
 	path = .vim/pack/bundle/opt/Nvim-R
 	url = https://github.com/BertrandSim/Nvim-R.git
+[submodule ".vim/pack/bundle/opt/auto-pairs"]
+	path = .vim/pack/bundle/opt/auto-pairs
+	url = https://github.com/jiangmiao/auto-pairs.git
+[submodule ".vim/pack/bundle/opt/vim-angry"]
+	path = .vim/pack/bundle/opt/vim-angry
+	url = https://github.com/b4winckler/vim-angry.git
+[submodule ".vim/pack/bundle/start/vim-markdown-folding"]
+	path = .vim/pack/bundle/start/vim-markdown-folding
+	url = https://github.com/BertrandSim/vim-markdown-folding
