--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule ".vim/pack/bundle/opt/vim-easy-align"]
 	path = dot_vim/pack/bundle/opt/vim-easy-align
 	url = https://github.com/junegunn/vim-easy-align.git
+[submodule "dot_vim/pack/text-obj/opt/vim-textobj-entire"]
+	path = dot_vim/pack/text-obj/opt/vim-textobj-entire
+	url = https://github.com/kana/vim-textobj-entire.git
+[submodule "dot_vim/pack/text-obj/opt/vim-textobj-line"]
+	path = dot_vim/pack/text-obj/opt/vim-textobj-line
+	url = https://github.com/kana/vim-textobj-line.git
